--- a/m1/w2/d1/esercizio-w2-d1/assets/css/responsive.css
+++ b/m1/w2/d1/esercizio-w2-d1/assets/css/responsive.css
@@ -65,7 +65,7 @@
         margin-left: auto;
         margin-right: auto;
         font-size: 1.3em;
-        max-width: 1200px;
+        max-width: 1300px;
     }
 
     iframe{        
@@ -77,7 +77,10 @@
         width: calc(100%/3 - 4px);
     }
 
+}
+
+@media screen and (min-width: 1410px){
     .social, .toTop{
-        right: calc((100% - 1200px)/2);
+        right: calc((100% - 1300px)/2 - 50px );
     }
 }
