--- a/m1/w2/d2/eserciziow2d2/start/assets/css/stile.css
+++ b/m1/w2/d2/eserciziow2d2/start/assets/css/stile.css
@@ -1,6 +1,9 @@
 /* IMPOSTAZIONI GENERALI */
-html {font-size: 62.5%;}
-body { 
+html {
+    font-size: 62.5%;
+}
+
+body {
     font-family: Poppins, 'Helvetica Neue', sans-serif;
     font-size: 1.4rem;
     line-height: 1.5;
@@ -8,13 +11,21 @@ body {
     background-image: url('../img/sfondo.png');
     background-position: center center;
 }
-* {box-sizing: border-box;}
-hr {display: none;} /* rimuove l'elemento */
+
+* {
+    box-sizing: border-box;
+}
+
+hr {
+    display: none;
+}
+
+/* rimuove l'elemento */
 
 /* HEADER */
 header {
-    background: rgb(0,160,198);
-    background: linear-gradient(180deg, rgba(0,160,198,1) 0%, rgba(3,109,134,1) 68%);
+    background: rgb(0, 160, 198);
+    background: linear-gradient(180deg, rgba(0, 160, 198, 1) 0%, rgba(3, 109, 134, 1) 68%);
     text-align: center;
     text-transform: uppercase;
     font-weight: bold;
@@ -22,12 +33,14 @@ header {
     box-shadow: 0 3px 3px #444;
     margin-bottom: 1.5em;
     padding: 2em 1.5em;
-    position:sticky;
+    position: sticky;
     top: 0;
 }
+
 header div img {
     margin-bottom: 20px;
 }
+
 header nav ul {
     margin: 0;
 }
@@ -35,16 +48,18 @@ header nav ul {
 header nav li {
     display: inline-block;
     list-style: none;
-    margin:1.2rem;
+    margin: 1.2rem;
 }
 
 header nav li a {
     color: white;
     text-decoration: none;
 }
+
 header nav li a:hover {
     color: red;
 }
+
 header nav li a::before {
     content: "\22c6\0020";
 }
@@ -54,16 +69,19 @@ main {
     background-color: #fff;
     box-shadow: 0 3px 3px #444;
     padding: 2em 1em;
-    margin-bottom:1.5em ;
+    margin-bottom: 1.5em;
 }
-section { 
+
+section {
     background-color: #e3e3e3;
     padding: 1em;
     margin-bottom: 2em;
 
+    /* serve per l'absolute*/
     position: relative;
     padding-top: 40px
 }
+
 section h2 {
     text-align: center;
     color: #333;
@@ -72,12 +90,20 @@ section h2 {
     text-transform: uppercase;
     /*margin-bottom: 1em;   eliminato*/
 
+    /* opzione absolute*/
     position: absolute;
-    background-color: #bbb;
-    box-shadow: 2px 2px 4px;
-    padding: 3px 10px; 
     left: 18px;
     top: -18px;
+
+    /* opzione relative*/
+    /*position: relative;
+    bottom: 30px;
+    left: 0;
+    width:fit-content;*/
+
+    background-color: #bbb;
+    box-shadow: 2px 2px 4px;
+    padding: 3px 18px;
 }
 
 /* ELEMENTI NEL MAIN - ARTICLE */
@@ -87,40 +113,52 @@ h1 {
     letter-spacing: -0.03em;
     margin-bottom: 0.7em;
 }
-p, address, ul, ol, dl, blockquote {
+
+p,
+address,
+ul,
+ol,
+dl,
+blockquote {
     margin-bottom: 1.2em;
 }
 
-#badge{
+#badge {
     border: 4px solid purple;
     float: left;
     margin-right: 15px;
     padding: 2px;
 }
 
-.rel{
-    margin-bottom:30px;
+.rel {
+    margin-bottom: 30px;
 }
 
-h1 + p {
+h1+p {
     color: #a0a0a0;
 }
-ul, ol {
+
+ul,
+ol {
     margin-left: 2em;
 }
+
 a {
     color: #00A0C6;
     font-weight: bold;
 }
+
 strong {
     color: #a02571;
     font-weight: bold;
 }
+
 code {
     background-color: #e3e3e3;
     border: 1px solid #969494;
     border-radius: 5px;
 }
+
 iframe {
     width: 100%;
     height: auto;
@@ -132,19 +170,24 @@ iframe {
 table {
     margin-bottom: 2em;
 }
+
 caption {
     font-weight: bold;
     font-style: italic;
 }
+
 thead tr {
     background-color: #3f6bca;
     color: #ffffff;
 }
-th, td {
+
+th,
+td {
     padding: 12px 15px;
     vertical-align: bottom;
     text-align: center;
 }
+
 tbody tr {
     border-bottom: 1px solid #dddddd;
 }
@@ -164,6 +207,7 @@ input {
     border: 0;
     border-bottom: 1px dashed #333;
 }
+
 button {
     padding: 4px 7px;
     background-color: #3f6bca;
@@ -181,12 +225,14 @@ aside h2 {
     text-transform: uppercase;
     margin-bottom: 1em;
 }
+
 aside div {
     background-color: #e3e3e3;
     border: 1px solid #c3c3c3;
     margin-bottom: 1em;
     padding: 1em;
 }
+
 aside div p:last-child {
     margin-bottom: 0;
     font-size: 0.8em;
@@ -196,39 +242,40 @@ aside div p:last-child {
 
 /* FOOTER */
 footer {
-    background: rgb(53,53,53);
-    background: linear-gradient(0deg, rgba(53,53,53,1) 0%, rgba(5,85,103,1) 68%);
+    background: rgb(53, 53, 53);
+    background: linear-gradient(0deg, rgba(53, 53, 53, 1) 0%, rgba(5, 85, 103, 1) 68%);
     box-shadow: 0 3px 3px #444;
     color: #f0f0f0;
     padding: 1em;
     text-align: center;
     font-size: 1.2rem;
 }
+
 footer a {
     color: fuchsia;
 }
 
 /*icone laterrali*/
 
-.top{
+.top {
     position: fixed;
     bottom: 30px;
     right: 18px;
     font-size: 3rem;
 }
 
-.top a{
+.top a {
     color: purple;
 }
 
-.link{
+.link {
     position: fixed;
     bottom: 130px;
     right: 18px;
     font-size: 3rem;
 }
 
-.link a{
+.link a {
     display: block;
     color: blue;
 }
