--- a/m1/w2/d2/eserciziow2d2/start/assets/css/stile.css
+++ b/m1/w2/d2/eserciziow2d2/start/assets/css/stile.css
@@ -80,7 +80,7 @@ section {
     padding: 1em;
     margin-bottom: 2em;
 
-    /* serve per l'absolute*/
+    /*serve per l'absolute*/
     position: relative;
     padding-top: 40px
 }
@@ -100,7 +100,7 @@ section h2 {
 
     /* opzione relative*/
     /*position: relative;
-    bottom: 30px;
+    top: -30px;
     left: 0;
     width:fit-content;*/
 
@@ -127,7 +127,8 @@ blockquote {
 }
 
 #badge {
-    border: 4px solid purple;
+    border: 4px solid blue;
+    outline: 4px solid fuchsia;
     float: left;
     margin-right: 15px;
     padding: 2px;
