--- a/m1/w2/d3/grid/css/style.css
+++ b/m1/w2/d3/grid/css/style.css
@@ -64,7 +64,7 @@ h3{
     "header header header header"
     "main main aside aside"
     "main main aside aside"
-    ". footer footer .";
+    "main main footer footer";
 
     height: 50vh;
     
