--- a/m1/w2/d3/Eserciziow2d3/start/assets/css/grid.css
+++ b/m1/w2/d3/Eserciziow2d3/start/assets/css/grid.css
@@ -8,10 +8,10 @@ main{
     ;
 }
 
-.clearfix{
+.clearfix{                  /*classe del main*/
     grid-area: article;    
 }
-.news{
+.news{                      /*classe della sezione novità/mail*/
     margin-top: 20px;
     grid-area: news; 
     position: sticky; 
