--- a/m1/w2/d3/grid/css/style.css
+++ b/m1/w2/d3/grid/css/style.css
@@ -85,3 +85,9 @@ h3{
 #n3 .blocco:nth-child(4) {
     grid-area: footer;
 }
+
+#n4{
+    grid-template-columns: repeat(3, 1fr) minmax(20px,40%);
+    grid-template-rows: repeat(2, 100px) 300px;
+    gap: 20px;
+}
