--- a/m1/w2/d2/eserciziow2d2/start/assets/css/stile.css
+++ b/m1/w2/d2/eserciziow2d2/start/assets/css/stile.css
@@ -134,9 +134,12 @@ blockquote {
     padding: 2px;
 }
 
-.rel {
-    margin-bottom: 30px;
-}
+.rel::after { /*clearfix*/
+    content: "";
+    clear: both;
+    display: block;
+  }
+  
 
 h1+p {
     color: #a0a0a0;
