--- a/m1/w2/progetto-w2/start/assets/css/responsive.css
+++ b/m1/w2/progetto-w2/start/assets/css/responsive.css
@@ -1,5 +1,79 @@
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 768px) {
     
+    #courses-mobile{
+        display: none;
+    }
     
+    #courses{
+        display: block;  
+    }
+
+    #menu-toggle{
+        height: auto;
+    }
+
+    .container label>i{
+        display: none;
+    }
+
+    #menu-toggle li {
+        display: inline;
+    }
+
+    .container nav{
+        width: auto;
+        font-size: 1.2rem;
+        top: 30px;
+        right: 20px;
+    }
+
+    .container #menu-toggle .register{
+        color: white;
+        background: linear-gradient(90deg, #6cc1e2 50%, #392f7a 100%);
+        padding: 18px;
+    }
+
+    .summary, .become, .social{
+        display: flex;
+        align-content: center;
+    }
+
+    .summary div{     
+        flex: 1 1 30%;
+        margin:0 15px;
+    }
+
+    .become{
+        align-content: center;
+        align-items: center;
+    }
+
+    .become div{    
+        flex: 1 1 50%;
+    }
+
+    .social div{     
+        flex: 1 1 30%;
+        margin:0 15px;
+    }
+
+    .copyright{
+        text-align: center;
+    }
+
+    #courses{
+        width: 100%;
+        margin-left: 1px;
+        margin-right: 1px;
+    }
+
+}
+
+@media screen and (min-width: 1024px) {
+    
+    #courses{
+        margin-left: 30%;
+        margin-right: 30%;
+    }
 
 }
