--- a/m1/w2/progetto-w2/start/assets/css/stile.css
+++ b/m1/w2/progetto-w2/start/assets/css/stile.css
@@ -18,8 +18,18 @@ h2,h3{
     margin-bottom: 40px;
 }
 
+h3{
+    text-align: center;
+}
+
+main i{
+    
+    font-size: 2.5rem;
+}
+
 h4{
     font-size: 2rem;
+    line-height: 1.1;
 }
 
 h5{
@@ -70,11 +80,24 @@ section, .social{
 
 header{
     background-color: white ;
-    padding: 20px;
     box-shadow: 0px 3px 5px #d3d3d3;
 
     position: sticky;
     top: 0;
+}
+
+.container{
+    
+    padding: 20px 20px;
+    
+    position: relative;
+ 
+}
+
+/*menu*/
+
+header i{
+    font-size: 3rem;
 }
 
 #menu-toggle{
@@ -89,18 +112,15 @@ header{
     margin-left: 10px;
 }
 
-.container{
-    position: relative;
-}
-
 .container img{
+    margin-top: 10px;
     width: auto;
 }
 
 .container nav{
     position:absolute;
-    top: 0;
-    right: 0;
+    top: 20px;
+    right: 20px;
     width: 200px;
 }
 
@@ -120,6 +140,12 @@ input[type="checkbox"]:checked + #menu-toggle{
     
     background-color: white;
 }
+
+.container nav label::after {
+    display: block;
+    content: "";
+    clear: both;
+  }
 
 /* MAIN */
 
@@ -144,7 +170,9 @@ p{
     color: white;
 }
 
-
+.summary > div{
+    margin-top: 30px;
+}
 
 /* FOOTER */
 
@@ -175,6 +203,10 @@ footer form>input:first-child{
     box-shadow:0px 0px 2px black inset;
 }
 
+.copyright{
+    padding: 20px;
+}
+
 /*Contatti form*/
 
 .button{
@@ -195,13 +227,59 @@ footer form>input:first-child{
 }
 
 .message{
-    height: 80px;
+    height: 20vw;
 }
 
 .summary .button{
     font-size: 1.2rem;
 }
 
+
+/*tabella*/
+
+#courses{
+    display: none;
+}
+
+#courses thead{
+    background-color: #5f82a3;
+    color: white;
+}
+
+#courses-mobile .even, #courses tbody tr:nth-child(odd) {
+    background-color: #d2dce7;    
+}
+
+#courses caption, #courses-mobile caption{
+    font-size: 1.8rem;
+}
+
+#courses-mobile th{
+    
+    font-weight: bold;
+    width: 50%;
+}
+
+th, td {
+    padding: 5px 8px;
+    text-align: left;
+  }
+
+#courses tr, #courses-mobile tr{
+    font-size: 1rem;
+    width: 50%;
+    text-align: left;
+}
+
+#courses th, #courses td{    
+    text-align: center;
+}
+
+
+#courses, #courses-mobile {
+    margin-left: auto;
+    margin-right: auto;
+}
 
 /*animazione*/
 
