--- a/m1/w2/progetto-w2/start/assets/css/stile.css
+++ b/m1/w2/progetto-w2/start/assets/css/stile.css
@@ -146,7 +146,7 @@ header,
     transform: rotate(-90deg);
 }
 
-.button-container div {
+.menu-button {
     width: 8px;
     height: 8px;
     background: #e42424;
