--- a/m2/w1/d4/esercitazione/assets/style.css
+++ b/m2/w1/d4/esercitazione/assets/style.css
@@ -1,30 +1,62 @@
 .dropbtn {
-	background-color: #ce6400;
-	color: white;
-	padding: 16px;
-	font-size: 2rem;
-	border: none;
-	cursor: pointer;
+    background-color: #ce6400;
+    color: white;
+    padding: 16px;
+    font-size: 2rem;
+    border: none;
+    cursor: pointer;
     width: 100%;
 }
 
-.formattazione{
+.formattazione {
     text-align: center;
     padding: 5px;
     cursor: pointer;
 }
 
-.formattazione:hover{
+.formattazione:hover,
+.myDropdown p:hover {
     background-color: #ccc;
 }
 
-#myDropdown{
-    height: 0;
+.myDropdown {
+    max-height: 0;
     overflow: hidden;
-    transition: All 0.5s;
-    background-color: #ddd
+    background-color: #ddd;
+
+    transition: max-height 0.2s ease-out;
 }
 
-#myDropdown.active{
-    height: 110px;
+.myDropdown.active {
+    max-height: 400px;
+
+    transition: max-height 0.25s ease-in;
+}
+
+#create-list,
+#destroy-list {
+    width: 50%;
+}
+
+#destroy-list {
+    margin-left: -4px;
+}
+
+#insert {
+    width: 100%;
+    font-size: 2rem;
+    padding: 15px;
+
+    box-sizing: border-box;
+}
+
+#lista {
+    height: 10px;
+    margin: 15px;
+    font-size: 1.5rem;
+}
+
+#lista li {
+    line-height: 1.8em;
+    border-bottom: 1px solid #000
 }
