--- a/m2/w2/d3/esercitazione/scss/_header.scss
+++ b/m2/w2/d3/esercitazione/scss/_header.scss
@@ -1,8 +1,37 @@
 @import 'variables';
-@import 'buttons';
 
-header{
+.banner-header {
+
     width: 100%;
-    height: 50px;
+
+    height: max-content;
     background-color: $bg-header;
+
+    position: sticky;
+    top: 0;
+
+    @include font(family, Arial);
+    @include font(size, 1.5rem);
+
+    a {
+        padding: 10px;
+        text-decoration: none;
+        color: $head-text;
+        margin: auto 0;
+    }
+
+    .container {
+
+        display: flex;
+
+        flex-wrap: nowrap;
+        flex-direction: row;
+        justify-content: space-between;
+    }
+
+    .container-menu {
+        @extend .container;
+        padding: 10px;
+    }
+
 }
