--- a/m3/w2/d1/esercitazione/exercise1/src/app/foto/foto.component.html
+++ b/m3/w2/d1/esercitazione/exercise1/src/app/foto/foto.component.html
@@ -1,5 +1,5 @@
 
-<h4 class="text-center">{{like}}</h4>
+<h4 class="text-center">{{arrLike.length}}</h4>
 
 <div class="row justify-content-center m-0">
 
