--- a/m3/w2/progetto/progetto/src/app/Model/todo-list/todo-list.component.scss
+++ b/m3/w2/progetto/progetto/src/app/Model/todo-list/todo-list.component.scss
@@ -1,18 +1,18 @@
 @import '../scss/_variables.scss';
 
-ul{
-  text-align:start;
-  margin: 0 10vw;
+ul {
+  text-align: start;
+  margin: 0 auto;
+
+  max-width: 1000px;
+
 }
 
-li{
+li {
+  display: grid;
+  grid: max-content / auto auto;
+  justify-content: space-between;
+  align-items: center;
+
   margin-bottom: 1.2rem;
-}
-
-.btn-container{
-  display: inline;
-  float: right;
-
-  margin-right: 1rem;
-
 }
