--- a/m3/w2/progetto/progetto/src/app/section/todos/todo/todos.component.scss
+++ b/m3/w2/progetto/progetto/src/app/section/todos/todo/todos.component.scss
@@ -2,6 +2,7 @@
 
 .todos input {
   font-size: 1.2rem;
+
   width: 80%;
 
   border: 2px solid $loader;
@@ -12,6 +13,9 @@
 
 form {
   text-align: start;
-  margin: 0 10vw;
-  margin-top: 1rem;
+  margin: 1rem auto;
+
+  text-align: center;
+
+  max-width: 1000px;
 }
