--- a/m3/w3/progetto/progetto/src/app/nav/header/header.component.html
+++ b/m3/w3/progetto/progetto/src/app/nav/header/header.component.html
@@ -1,14 +1,14 @@
 <nz-header>
   <div nz-row nzJustify="space-between" nzAlign="middle">
 
-    <ul nz-menu nzTheme="dark" nzMode="horizontal" class="nz-col" [nzSelectable]="false">
+    <ul nz-menu nzTheme="dark" nzMode="horizontal" nz-col  nzFlex="1 1 auto" [nzSelectable]="false">
       <li nz-menu-item [routerLink]="'/posts'">Post</li>
       <li nz-menu-item [nzMatchRouter]="'true'" [nzDisabled]="true"><a>Users</a></li>
     </ul>
 
-    <div class="nz-col">
+    <div nz-col nzFlex="0 1 auto">
       <a nz-button nzType="primary" [nzSize]="size" nzShape="round" [routerLink]="'/login'">
-        <span nz-icon nzType="user" nzTheme="outline"></span>
+        <span nz-icon nzType="user"></span>
         Login
       </a>
     </div>
