--- a/m3/w3/progetto/progetto/src/app/user/register/register.component.html
+++ b/m3/w3/progetto/progetto/src/app/user/register/register.component.html
@@ -1,6 +1,6 @@
 <nz-content>
   <form class="register-form" nz-form [formGroup]="validateForm" (ngSubmit)="submitForm()">
-
+    <h1>Registrati</h1>
     <nz-form-item>
       <nz-form-control nzErrorTip="Inserisci un nome di almeno 3 caratteri" nzValidateStatus="" nzHasFeedback>
         <nz-input-group nzPrefixIcon="user">
