--- a/m3/w3/progetto/progetto/src/app/user/login/login.component.html
+++ b/m3/w3/progetto/progetto/src/app/user/login/login.component.html
@@ -1,10 +1,20 @@
 <nz-content>
+
+
   <form nz-form [formGroup]="validateForm" class="login-form" (ngSubmit)="submitForm()" >
+    <h1>Login</h1>
+
+    <nz-alert *ngIf="errorMsg"
+    nzType="error"
+    nzMessage="Utente non trovato"
+    nzDescription="Ricontrolla i dati"
+    nzShowIcon>
+  </nz-alert>
 
     <nz-form-item >
-      <nz-form-control nzErrorTip="Inserici username">
-        <nz-input-group nzPrefixIcon="user">
-          <input type="text" nz-input formControlName="username" placeholder="Username" />
+      <nz-form-control nzErrorTip="Inserici email">
+        <nz-input-group nzPrefixIcon="mail">
+          <input type="text" nz-input formControlName="email" placeholder="Email" />
         </nz-input-group>
       </nz-form-control>
     </nz-form-item>
@@ -24,7 +34,7 @@
         </label>
       </div>
     </div>
-    <button nz-button class="login-form-button login-form-margin" [nzType]="'primary'">Log in</button>
+    <button nz-button class="login-form-button login-form-margin" [nzType]="'primary'" [nzLoading]="isLoading">Log in</button>
     Se non sei registrato
     <a [routerLink]="'/register'">Clicca qui!</a>
   </form>
