--- a/m3/w3/progetto/progetto/src/app/nav/header/header.component.html
+++ b/m3/w3/progetto/progetto/src/app/nav/header/header.component.html
@@ -7,10 +7,7 @@
     </ul>
 
     <div nz-col nzFlex="0 1 auto">
-      <a nz-button nzType="primary" [nzSize]="size" nzShape="round" [routerLink]="'/login'">
-        <span nz-icon nzType="user"></span>
-        Login
-      </a>
+      <app-login-button></app-login-button>
     </div>
   </div>
 
