--- a/m3/w3/progetto/progetto/src/app/user/register/register.component.html
+++ b/m3/w3/progetto/progetto/src/app/user/register/register.component.html
@@ -1,39 +1,8 @@
 <nz-content>
   <form class="register-form" nz-form [formGroup]="validateForm" (ngSubmit)="submitForm()">
     <h1>Registrati</h1>
-    <nz-form-item>
-      <nz-form-control nzErrorTip="Inserisci un nome di almeno 3 caratteri" nzValidateStatus="" nzHasFeedback>
-        <nz-input-group nzPrefixIcon="user">
-          <input nz-input id="name" formControlName="name" placeholder="Name*" />
-        </nz-input-group>
-      </nz-form-control>
-    </nz-form-item>
 
-    <nz-form-item>
-      <nz-form-control nzValidateStatus="" nzHasFeedback nzValidatingTip="Verifico Username"
-        nzWarningTip="Username già in uso" nzErrorTip="Username di almeno 3 caratteri, niente spazi">
-        <nz-input-group nzPrefixIcon="user">
-          <input nz-input id="username" formControlName="username" placeholder="Username*" />
-        </nz-input-group>
-      </nz-form-control>
-    </nz-form-item>
-
-    <nz-form-item>
-      <nz-form-control nzValidateStatus="" nzHasFeedback nzValidatingTip="Verifico Email"
-        nzWarningTip="Email già in uso" nzErrorTip="Inserire un Email valida">
-        <nz-input-group nzPrefixIcon="mail">
-          <input nz-input formControlName="email" id="email" placeholder="Email*" />
-        </nz-input-group>
-      </nz-form-control>
-    </nz-form-item>
-
-    <nz-form-item>
-      <nz-form-control nzErrorTip="Inserisci password di almeno 5 caratteri" nzValidateStatus="" nzHasFeedback>
-        <nz-input-group nzPrefixIcon="lock">
-          <input nz-input type="password" id="password" formControlName="password" placeholder="Password*" />
-        </nz-input-group>
-      </nz-form-control>
-    </nz-form-item>
+    <app-user-form></app-user-form>
 
     <nz-form-item class="register-area">
       <nz-form-control>
